pdl-intellij-plugin/src/test/resources/annotator/fixtures/UnresolvedType.pdl
record UnresolvedType {
  field: <error descr="Cannot resolve type 'Unresolved'">Unresolved</error>
}